# ultra

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  contributors.txt  ultra.pro  ultra.xcf  ultra_autotest.prf  ultra_benchmark.prf  ultra_boost.prf  ultra_cds.prf  ultra_event.prf  ultra_ffi.prf  ultra_gtest.prf  ultra_jit.prf
data/test/: 1.txt
data/train/: A.txt  B.txt  C.txt  D.txt  E.txt  K.txt  T.txt
doc/: ultra.qch
examples/: ultra.cpp
examples/core/: action.cpp  concurrent_queue.cpp  thread_pool.cpp
src/: address.cpp  address.h  back_prop.cpp  back_prop.h  denoising_autoencoder.cpp  denoising_autoencoder.h  device.cpp  device.h  execution_service.cpp  execution_service.h  field.cpp  field.h  genetic.cpp  genetic.h  interp.cpp  interp.h  logic_time.cpp  logic_time.h  message.cpp  message.h  messages.cpp  messages.h  msg.proto  node.cpp  node.h  port.cpp  port.h  rbm.cpp  rbm.h  src.pro  stacked_denoising_autoencoder.cpp  stacked_denoising_autoencoder.h  stacked_rbm.cpp  stacked_rbm.h  task.cpp  task.h  ultra.cpp  ultra.h  ultra_global.h  util.cpp  (+3 more)
src/core/: action.h  concurrent_queue.h  concurrent_queue.ipp  concurrent_queue.tpp  core.cpp  core_p.h  execution_service.cpp  execution_service.h  future.h  grid.h  ioservice_pool.cpp  ioservice_pool.h  locks.cpp  locks.h  network_session.cpp  network_session.h  pipe.cpp  pipe.h  result.cpp  result.h  schedulers.cpp  schedulers.h  stack_allocator.cpp  stack_allocator.h  system.cpp  system.h  thread_pool.cpp  thread_pool.h
src/tests/: CMakeLists.txt  main.cpp  test-node.cc
src/ultra/: CMakeLists.txt  message_handler.cc  message_handler.h  node.cc  node.h
tests/: tests.pro
tests/auto/: auto.pro
tests/auto/address/: address.pro  tst_address.cpp
tests/benchmarks/: benchmarks.pro
tests/benchmarks/address_hash/: address_hash.pro  tst_address_hash.cpp
tests/benchmarks/cds/: cds.pro
tests/benchmarks/cds/basket_queue/: basket_queue.pro  tst_basket_queue.cpp
tests/benchmarks/cds/maps/: maps.pro  tst_maps.cpp
tests/gtests/: benchmark.cpp  benchmark.h  gtests.pro  main.cpp  mock_types.h  test_address.cpp  test_back_prop.cpp  test_concurrent_queue.cpp  test_denoising_autoencoder.cpp  test_execution_service.cpp  test_field.cpp  test_gccjit.cpp  test_grid.cpp  test_libevent.cpp  test_libffi.cpp  test_libjit.cpp  test_logic_time.cpp  test_message.cpp  test_network_session.cpp  test_node.cpp  test_ordered_lock.cpp  test_port.cpp  test_rbm.cpp  test_schedulers.cpp  test_stacked_denoising_autoencoder.cpp  test_stacked_rbm.cpp  test_system.cpp  test_thread_pool.cpp  test_vm.cpp
